[package]
name = "rust_qmc"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "0.33.0", features = ["rand", "serde-serialize"] }
approx = "0.5.1"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.9.34+deprecated"
clap = { version = "4.5.19", features = ["derive"] }
statrs = "0.18.0"

# add o3 optimization flag
[profile.release]
opt-level = 3
